Fix link contrast ratio in light mode

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -13,7 +13,7 @@
     @apply bg-neutral-100 text-neutral-900 dark:bg-neutral-900 dark:text-neutral-100;
   }
   p a {
-    @apply hover:magic-text inline-block font-medium text-blue-500 underline transition hover:scale-105;
+    @apply hover:magic-text inline-block font-medium text-blue-600 dark:text-blue-500 underline transition hover:scale-105;
   }
 }
 
